update api-docs
