# routes/supplier.js
@@ -1,7 +1,8 @@
 var express = require('express');
 var {
   login,
-  signUp
+  signUp,
+  supplier_list
 } = require("../controller/supplier")
 var supplierRouter = express.Router();
 
@@ -10,5 +11,8 @@ supplierRouter.route("/login")
 
 supplierRouter.route("/signup")
 .post(signUp)
+
+supplierRouter.route("/list")
+.get(supplier_list)
 
 module.exports = supplierRouter;
